testsuite/tests/haddock/should_fail_flag_haddock/haddockE002.stderr

haddockE002.hs:6:0: parse error (possibly incorrect indentation)
