testsuite/tests/haddock/should_fail_flag_haddock/haddockE002.hs

module ShouldFail where

-- | aksdjhaskdjhasdsakjhdajksd

main=undefined
